--- a/client/templates/StartResearchTemplate.html
+++ b/client/templates/StartResearchTemplate.html
@@ -3,8 +3,6 @@
 		<div class = "row">
 	      	<h1 id="researchTitle" style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> 
 	     	</h1>
-
-			{{>Countries}}
 			<br>
 			<br>
 
@@ -13,8 +11,10 @@
 			  		<li id="fundamentals" class = "active"><a href="#Fundamentals" aria-expanded="true" data-toggle="tab">Fundamentals</a></li>
 					<li id="summary"><a href="#Summary" data-toggle="tab">Summary</a></li>
 					<li id="team"><a href="#Team" data-toggle="tab">Team</a></li>	
+					<!--
 					<li id="rewards"><a href="#Rewards" data-toggle="tab">Rewards</a></li>
-					<li id="ekxtras"><a href="#Extras" data-toggle="tab">Extras</a></li>		
+					<li id="extras"><a href="#Extras" data-toggle="tab">Extras</a></li>	
+					-->	
 				</ul>
 			</div>
 
@@ -30,12 +30,14 @@
 				<div id="Team" class="tab-pane fade">
 							{{ >Team}} 
 				</div>
+				<!--
 				<div id="Rewards" class="tab-pane fade">
 							{{ >Rewards}} 
 				</div>
 				<div id="Extras" class="tab-pane fade">
 							{{ >Extras}} 
 				</div>
+			-->
 			</div>
 			
 		</div>
