--- a/client/templates/projectPage.html
+++ b/client/templates/projectPage.html
@@ -9,8 +9,8 @@
 		     	</h1>
 			    <div class="featuredLinks">
 	              	<ul>
-	                  <li><i class="fa fa-tag"></i> <a href="">Medical</a> , <a href="">Cancer Research</a></li>
-	                  <li><a href=""><i class="fa fa-map-marker"></i> City</a></li>
+	                  <li><i class="fa fa-tag"></i> <a href="">{{department}}</a> , <a href="">{{subfield}}</a></li>
+	                  <li><a href=""><i class="fa fa-map-marker"></i> &nbsp;{{city}},&nbsp;{{country}}</a></li>
 	              	</ul>
 	          	</div>
 		    </center>
@@ -27,16 +27,6 @@
 				    <video id = "projectVideo" controls>
 				    	<source src="{{videoURL}}">
 				    </video>
-				</div>
-				<div class="row">
-					<div class="projectAuthor featuredLinks">
-						<br>
-						<ul>
-				        	<li><i class="fa fa-tag"></i> <a href="">Medical</a> , <a href="">Cancer Research</a></li>
-				        	<li><a href=""><i class="fa fa-map-marker"></i> City</a></li>
-				        </ul>
-
-					</div>
 				</div>
 			</div>
 			<div class="col-md-3 projectInfo">
