--- a/client/templates/department.html
+++ b/client/templates/department.html
@@ -1,37 +1,23 @@
 <template name = "Department">
-	<h5> Department </h5>
-		<div class = "col-md-4">
-		    <div class="ui dropdown button departments">
-			  <span class="text department">Choose Department</span>
-			  <i class="dropdown icon"></i>
+		<div id = "departments">
+			<div class="ui sub header">Select your department</div>
+			<div class="ui fluid multiple search normal selection dropdown department col-md-6">
+		  	<input type="hidden" name="department" id="ResearchDepartment">
+		  	<i class="dropdown icon"></i>
+		  	<div class="default text">Department...</div>
 			  <div class="menu">
-			    <div class="item">
-			      <span class="text math_department">Mathematics</span>
-			    </div>
-			    <div class="item">
-			      <i class="dropdown icon"></i>
-			      <span class="text health_department">Health</span>
-			      <div class="menu">
-			        <div class="item">Fitness</div>
-			        <div class="item">Nutrition</div>
-			      </div>
-			    </div>
-			    <div class="item">
-			      <i class="dropdown icon"></i>
-			      <span class="text science_department">Science</span>
-			      <div class="menu">
-			        <div class="item">Medical</div>
-			        <div class="item">Physical</div>
-			        <div class="item">Astronomical</div>
-			      </div>
-			    </div>
-			  </div>
-			</div>
+			  <div class="item">Medical</div>
+			  <div class="item">Engineering</div>
+			  <div class="item">Mathematics</div>
+			  <div class="item">Physics</div>
+			  <div class="item">Fitness & Nutrition</div> 
+				</div>
+			</div> 
 		</div>
 	<script type="text/javascript">
-		$('.ui.dropdown.departments')
+		$('.ui.normal.dropdown.department')
 	  .dropdown({
-	  	
+	    maxSelections: 1
 	  })
 	;
 	</script>
