--- a/client/templates/featuredProject.html
+++ b/client/templates/featuredProject.html
@@ -3,19 +3,19 @@
     <div class="featured-project">
       <div class="col-md-6">
         <div class="featured-image">
-          <a href="/Project">  <img alt="Project" src="Medical_Small.jpg" class="img-responsive"></a>
+          <a href="/Project/{{_id}}">  <img alt="Project" src="{{photoURL}}" class="img-responsive"></a>
         </div>
       </div>
       <div class="col-md-6">
         <div class="caption">
-          <h4>Project Title</h4>
+          <h4>{{title}}</h4>
           <img class="img-author img-circle" src="placeholder-profile.png">
-          Author
+          {{author}}
           <br>
           <br>
-          <p>Some small description about the project, in order to get backers' attention!</p>
+          <p>{{summary}}</p>
           <br>
-          <b>$1,023,234 USD</b>
+          <b>{{currency}}{{currentAmountFunded}} {{moneyType}}</b>
 
           <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
@@ -25,24 +25,24 @@
               <ul>
                   <li> <a href=""><i class="fa fa-clock-o"></i> Today</a></li>
                   <li><i class="fa fa-tag"></i> <a href="">Medical</a> , <a href="">Cancer Research</a></li>
-                  <li><a href=""><i class="fa fa-map-marker"></i> City</a></li>
+                  <li><a href=""><i class="fa fa-map-marker"></i> &nbsp;{{city}},&nbsp;{{country}}</a></li>
               </ul>
           </div>
 
           <div class="row">
             <div class="col-sm-3">
-              <b>60%</b>
+              <b>{{percentFunded}}%</b>
               <br>
               <span>Funded</span>
             </div>
             <div class="col-sm-3">
-              <b>320</b>
+              <b>{{numberOfSupporters}}</b>
               <br>
               <p>Supporters</p>
 
             </div>
             <div class="col-sm-3">
-              <b>40</b>
+              <b>{{daysLeft}}</b>
               <br>
               <p>Days Left</p>
             </div>
