Implemented simple search functionality with easy:search package

--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -19,9 +19,9 @@
         <li><a href="/Begin">Start a quest</a></li>
         <li><a href="#">About us</a></li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+      <form class="search navbar-form navbar-left" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" name="query" class="form-control" placeholder="Search">
         </div>
       </form>
       <ul class="nav navbar-nav navbar-right">
