created more fields, end of iteration 5
departments have their own pages now

--- a/client/templates/discoverLayout.html
+++ b/client/templates/discoverLayout.html
@@ -10,7 +10,7 @@
             <div class="col-md-11 col-sm-11">
                 <div class="row">
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects">
+                        <a class = "categoryLink" href="/projects/medical">
                             <div class="shortcut">
                                 <i class="fa fa-medkit shortcut-icon icon-red"></i>
                                 <h3>Medical</h3>
@@ -19,7 +19,7 @@
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects">
+                        <a class = "categoryLink" href="/projects/photography">
                             <div class="shortcut">
                                <i class="fa fa-camera shortcut-icon icon-green"></i>
                                 <h3>Photography</h3>
@@ -28,7 +28,7 @@
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects">
+                        <a class = "categoryLink" href="/projects/physiology">
                             <div class="shortcut">
                                 <i class="fa fa-male shortcut-icon icon-brown"></i>
                                 <h3>Physiology</h3>
@@ -37,16 +37,16 @@
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects">
+                        <a class = "categoryLink" href="/projects/mathematics">
                             <div class="shortcut">
-                                <i class="fa fa-female shortcut-icon icon-violet"></i>
-                                <h3>Fashion</h3>
+                                <i class="fa fa-area-chart shortcut-icon icon-violet"></i>
+                                <h3>Mathematics</h3>
                                 <span class="total-items">252,546</span>
                             </div>
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects">
+                        <a class = "categoryLink" href="/projects/nutrition">
                             <div class="shortcut">
                                 <i class="fa fa-spoon shortcut-icon icon-dark-blue"></i>
                                 <h3>Nutrition</h3>
@@ -55,7 +55,7 @@
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects">
+                        <a class = "categoryLink" href="/projects/engineering">
                             <div class="shortcut">
                                 <i class="fa fa-space-shuttle shortcut-icon icon-light-blue"></i>
                                 <h3>Engineering</h3>
@@ -64,7 +64,7 @@
                         </a> 
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects">
+                        <a class = "categoryLink" href="/projects/education">
                             <div class="shortcut">
                                 <i class="fa fa-graduation-cap shortcut-icon icon-black"></i>
                                 <h3>Education</h3>
@@ -73,7 +73,7 @@
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects">
+                        <a class = "categoryLink" href="/projects/other">
                             <div class="shortcut">
                                 <i class="fa fa-wrench shortcut-icon icon-light-green"></i>
                                 <h3>Other</h3>
@@ -90,7 +90,7 @@
 
     <div class = "container">
         {{#each project in getfeaturedProjects}}
-                {{> featuredProject (calcPercentage project)}}
+                {{>featuredProject (calcPercentage project)}}
         {{/each}}
     </div>
 
