--- a/client/templates/projectPage.html
+++ b/client/templates/projectPage.html
@@ -50,7 +50,7 @@
 				<a href="" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-lg">Support</a>
 				<hr>
 				
-				<img class="img-author img-circle" src="placeholder-profile.png">   
+				<img class="img-author img-circle" src="{{profile.picture}}">   
 					
 			</div>
 		</div>
