--- a/client/templates/featuredProject.html
+++ b/client/templates/featuredProject.html
@@ -3,13 +3,13 @@
     <div class="featured-project">
       <div class="col-md-6">
         <div class="featured-image">
-          <a href="/Project/{{_id}}">  <img alt="Project" src="{{photoURL}}" class="img-responsive"></a>
+          <a href="/projects/project/{{_id}}">  <img alt="Project" src="{{photoURL}}" class="img-responsive"></a>
         </div>
       </div>
       <div class="col-md-6">
         <div class="caption">
           <h4>{{title}}</h4>
-          <img class="img-author img-circle" src="placeholder-profile.png">
+          <img class="img-author img-circle" src="">
           {{author}}
           <br>
           <br>
@@ -18,13 +18,13 @@
           <b>{{currency}}{{currentAmountFunded}} {{moneyType}}</b>
 
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{percentFunded}}%;">
             </div>
           </div>
           <div class="featuredLinks">
               <ul>
                   <li> <a href=""><i class="fa fa-clock-o"></i> Today</a></li>
-                  <li><i class="fa fa-tag"></i> <a href="">Medical</a> , <a href="">Cancer Research</a></li>
+                  <li><i class="fa fa-tag"></i> <a href="">{{department}}</a> , <a href="">{{subfield}}</a></li>
                   <li><a href=""><i class="fa fa-map-marker"></i> &nbsp;{{city}},&nbsp;{{country}}</a></li>
               </ul>
           </div>
