changed hight and width of project thumbnails

--- a/client/templates/featuredProject.html
+++ b/client/templates/featuredProject.html
@@ -3,7 +3,7 @@
     <div class="featured-project">
       <div class="col-md-6">
         <div class="featured-image">
-          <a href="/projects/project/{{_id}}">  <img alt="Project" src="{{photoURL}}" class="img-responsive"></a>
+          <a href="/projects/project/{{_id}}">  <img alt="Project" src="{{photoURL}}" style="width:100%; height:350px; overflow: hidden;"></a>
         </div>
       </div>
       <div class="col-md-6">
