--- a/client/templates/projectThumbNail.html
+++ b/client/templates/projectThumbNail.html
@@ -2,7 +2,7 @@
 	<div class="col-md-4">
 	    <div class="thumbnail">
 	    	<a href = "/projects/project/{{_id}}">
-		    	<img src="{{photoURL}}" alt="..." style="max-width:350px; max-height:200px;">
+		    	<img src="{{photoURL}}" alt="..." style="width:100%; height:200px; overflow: hidden;">
 		    </a>
 	        <div class="caption">
 				<h4>{{title}}</h4>
