end of iteration 6
fixed thumbnail
limited user to 100 summary limit
can load more projects
ui for support button is complete

--- a/client/templates/featuredProject.html
+++ b/client/templates/featuredProject.html
@@ -9,7 +9,7 @@
       <div class="col-md-6">
         <div class="caption">
           <h4>{{title}}</h4>
-          <img class="img-author img-circle" src="">
+          <img class="img-author img-circle" src="{{getUserPhoto owner.[0]}}">
           {{author}}
           <br>
           <br>
