Added stripe customer cleanup, and supporters are now properly tracked by project collection

--- a/client/templates/projectPage.html
+++ b/client/templates/projectPage.html
@@ -35,11 +35,11 @@
 					<div class="col-md-3 projectInfo">
 						
 						<div class="projectSpecs">
-			              <h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> {{currency}}{{currentAmountFunded}} </h1>
-			              <span>donated of {{currency}}{{goal}} goal</span>
+			              <h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> {{currency}}{{formatNumber currentAmountFunded}} </h1>
+			              <span>donated of {{currency}}{{formatNumber goal}} goal</span>
 			            </div>
 			            <div class="projectSpecs">
-			              <h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> {{numberOfSupporters}} </h1>
+			              <h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> {{formatNumber numberOfSupporters}} </h1>
 			              
 			              <span>Supporters</span>
 
