Added customerId to users collection to link to stripe customer obj

--- a/client/templates/supportProject.html
+++ b/client/templates/supportProject.html
@@ -31,7 +31,7 @@
 				</div>
 			</div> <!-- end .row -->
 			<div class="form-group">
-      			<input type="submit" class="btn btn-success btn-block" data-loading-text="Setting up your trial..." style="margin-top: 40px; margin-bottom: 20px;" value="Put me on the rocketship">
+      			<input type="submit" class="btn btn-success btn-block" data-loading-text="Processing..." style="margin-top: 40px; margin-bottom: 20px;" value="Support">
     		</div> <!-- end .form-group -->
 		</form>
 	</div>
