Made small changes and incorporated stripe
getting research documents
timer
load more button

--- a/client/templates/Summary.html
+++ b/client/templates/Summary.html
@@ -25,7 +25,8 @@
 		<p> Your Research Pitch! </p>
 		<div class = "ResearchSummary">
 		
-			
+		<!--<div id="summernote">Hello Summernote</div>-->
+
 		</div>
 		<br>
 		<div class = "SaveCon">
@@ -34,6 +35,11 @@
 		<br>
 
 	</div>
-	
-	
+	<!--
+	<script type="text/javascript">
+		$(document).ready(function() {
+		  $('#summernote').summernote();
+		});
+	</script>
+-->
 </template>
