--- a/client/templates/mainLayout.html
+++ b/client/templates/mainLayout.html
@@ -5,5 +5,24 @@
 
 		{{> footer}}
 
+		<script type="text/javascript">
+		var count = 86400;
+		var counter = setInterval(timer, 1000);
 
+		function timer() {
+		    count = count - 1;
+		    if (count == 0) {
+		    	Meteor.call("decrementProjectDays");
+		        count = 86400;
+		    }
+
+		    var seconds = count;
+
+		    document.getElementById("timer").innerHTML = seconds; // watch for spelling
+		}
+		</script>
+
+
+
+		<span id='timer'></span>
 </template>
