--- a/client/templates/projectsLayout.html
+++ b/client/templates/projectsLayout.html
@@ -56,7 +56,7 @@
   </div>
   {{/if}}
 
-
+  <div class = "numOfProjects"></div>
   <center>
     <a href="" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-md LoadMore">Load More</a>
   </center>
